--- a/6. Algorithm/2. 수학 - 나머지 문제.md
+++ b/6. Algorithm/2. 수학 - 나머지 문제.md
@@ -13,7 +13,7 @@
 (4 % 3 * 7 % 3) % 3 = (1 * 1) % 3 = 1
 </br>
 - 나누기의 경우에는 성립하지 않는다. (Modular Inverse를 구해야 함) </br>
-- 뺼셈의 경우에는 먼저 mod연산을 한 결과가 음수가 나올 수 있기 때문에 다음과 같이 해야 한다.
+- 뺼셈의 경우에는 먼저 mod연산을 한 결과가 음수가 나올 수 있기 때문에 다음과 같이 해야 한다. </br>
 > (A-B) % M = ((A % M) - (B % M) + M) % M </br>
 0 <= A % M < M </br>
 0 <= B % M < M </br></br>
