--- a/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
+++ b/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
@@ -24,3 +24,11 @@
 즉, 항상 양수가 나오게 된다. 따라서 M을 추가로 더해줘야 한다.
 
 문제에서 '정답을 ~~~로 나눈 나머지를 출력하라' 라는 말이 있는 이유는 정답이 int나 long과 같은 자료형의 범위를 넘어가기 떄문이다. 따라서 앞에서 본 것처럼 매번 나누면 된다.
+___
+</br>
+
+## 약수
+- 두 자연수 A와 B가 있을 때, A=BC를 만족하는 자연수 C를 A의 약수라고 한다.
+- C가 A의 약수라면, A/C도 A의 약수가 되어야 한다. 즉, 나눴을 때 나머지가 0일 경우 몫도 약수가 된다.
+- C = A / C -> C^2 = A
+- 만약 어떤 자연수 N에 대해서 약수를 찾게 될 경우 루트N까지만 구해도 약수를 모두 구할 수 있다.
