최대공약수, 최소공배수, 소수 정리

--- a/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
+++ b/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
@@ -24,6 +24,10 @@
 즉, 항상 양수가 나오게 된다. 따라서 M을 추가로 더해줘야 한다.
 
 문제에서 '정답을 ~~~로 나눈 나머지를 출력하라' 라는 말이 있는 이유는 정답이 int나 long과 같은 자료형의 범위를 넘어가기 떄문이다. 따라서 앞에서 본 것처럼 매번 나누면 된다.
+</br>
+
+> 참조문제
+P_4375
 ___
 </br>
 
@@ -32,3 +36,108 @@ ___
 - C가 A의 약수라면, A/C도 A의 약수가 되어야 한다. 즉, 나눴을 때 나머지가 0일 경우 몫도 약수가 된다.
 - C = A / C -> C^2 = A
 - 만약 어떤 자연수 N에 대해서 약수를 찾게 될 경우 루트N까지만 구해도 약수를 모두 구할 수 있다.
+</br>
+
+> 참조문제
+P_1037, P_17427
+___
+</br>
+
+## 최대공약수
+최대 공약수는 줄여서 GCD라고 한다.
+두 수 A와 B의 최대공약수 G는 A와 B의 공통된 약수 중에서 가장 큰 정수이다.
+최대공약수를 구하는 가장 쉬운 방법은 2부터 min(A, B)까지 모든 정수로 나누어 보는 방법
+최대공약수가 1인 두 수를 서로소라고 한다.
+```
+int g = 1;
+for (int i = 2; i <= min(a, b); i++) {
+    if (a % i == 0 && b % i == 0) {
+        g = i;
+    }
+}
+```
+</br>
+또 다른 방법으로는 유클리드 호제법을 이용하는 방법이다. </br>
+a를 b로 나눈 나머지를 r이라고 할 때 GCD(a, b) = GCD(b, r)과 같다. </br>
+r이 0이면 그 때 b가 최대 공약수 이다. </br>
+
+> GCD(24,16) = GCD(16,8) = GCD(8,0) = 8
+
+</br>
+
+- 재귀함수를 통한 유클리드 호제법
+```
+int gcd(int a, int b) {
+    if (b == 0) {
+        return a;
+    } else {
+        return gcd(b, a%b);
+    }
+}
+```
+</br>
+
+- 반복문을 통한 유클리드 호제법
+```
+int gcd(int a, int b) {
+    while (b != 0) {
+        int r = a % b;
+        a = b;
+        b = r;
+    }
+
+    return a;
+}
+```
+</br>
+
+> 만약 세 수의 최대공약수를 구할 경우 아래와 같다. </br>
+GCD(a, b, c) = GCD(GCD(a, b), c)
+</br>
+
+> 참조문제
+P_2609
+___
+</br>
+
+## 최소공배수
+최소공배수는 줄여서 LCM이라고 한다.</br>
+두 수의 최소공배수는 두 수의 공통된 배수 중에서 가장 작은 정수가 된다. </br>
+최소공배수는 GCD를 응용해서 구할 수 있다. </br>
+두 수 a,b의 최대공약수를 g라고 할 때 최소공배수 l = g * (a/g) * (b/g)이다.
+</br>
+
+> 참조문제
+P_2609
+___
+</br>
+
+## 소수
+소수는 약수가 1과 자기 자신 밖에 없는 수를 나타낸다. </br>
+N이 소수가 되려면, 2보다 크거나 같고, N-1보다 작거나 같은 자연수로 나누어 떨어지면 안 된다.
+</br>
+
+- 어떤 수 N이 소수인지 구하는 방법
+> 1과 N을 제외하고 가장 작은 약수는 2가 되는데, 이때 약수의 성질로 루트 N을 기점으로 서로 나눠지기 떄문에 </br>
+2부터 루트N까지 사이에서 나눴을 때 0이 안나오면 된다. 이때 시간복잡도는 O(루트N)이 된다. </br>
+실제로 루트N까지 비교하지 않아도 된다. i <= 루트N일 경우 서로 제곱을 하게 되면 i^2 = N이 되므로 </br>
+i의 제곱근부터 N까지를 구하면 된다. 루트N은 실수이기 때문에 정수보다는 정확도가 떨어질 수 있다.
+```
+bool prime(int n) {
+    if (n < 2) {
+        return false;
+    }
+
+    for (int i = 2; i * i <= n; i++) {
+        if (n % i == 0) {
+            return false;
+        }
+    }
+
+    return true;
+}
+```
+> 참조문제
+P_1978
+</br>
+- N이하의 모든 소수를 구하는 방법
