--- a/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
+++ b/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
@@ -44,9 +44,9 @@ ___
 </br>
 
 ## 최대공약수
-최대 공약수는 줄여서 GCD라고 한다.
-두 수 A와 B의 최대공약수 G는 A와 B의 공통된 약수 중에서 가장 큰 정수이다.
-최대공약수를 구하는 가장 쉬운 방법은 2부터 min(A, B)까지 모든 정수로 나누어 보는 방법
+최대 공약수는 줄여서 GCD라고 한다. </br>
+두 수 A와 B의 최대공약수 G는 A와 B의 공통된 약수 중에서 가장 큰 정수이다. </br>
+최대공약수를 구하는 가장 쉬운 방법은 2부터 min(A, B)까지 모든 정수로 나누어 보는 방법 </br>
 최대공약수가 1인 두 수를 서로소라고 한다.
 ```
 int g = 1;
