브루트포스 추가

--- a/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
+++ b/6. Algorithm/2. 수학/2. 수학 - 나머지 문제.md
@@ -140,4 +140,35 @@ bool prime(int n) {
 > 참조문제
 P_1978
 </br>
-- N이하의 모든 소수를 구하는 방법
+- N이하의 모든 소수를 구하는 방법 (에라토스테네스의 체) </br>
+1. 2부터 N까지 모든 수를 써놓는다.
+2. 아직 지워지지 않은 수 중에서 가장 작은 수를 찾는다.
+3. 그 수는 소수이다.
+4. 이제 그 수의 배수를 모두 지운다.
+5. 다시 2번 부터 반복하면서 지우게 되면 남은 수는 소수만 남게 된다.
+> 다음 수 부터 비교를 하게 될 떈 N값의 제곱부터 확인하면 된다. 왜냐하면 N보다 작은 값은 이미 이전에서 지워졌기 때문에 비교할 필요가 없다.
+
+에라토스테네스의 체를 구하기 위해서는 2개의 배열이 필요하다. </br>
+1. 수를 지웠는지 아닌지를 저장하는 배열 (Ex. 지웠으면 true 아니면 false)
+2. 소수의 목록을 유지할 배열
+
+```
+int prime[100]; // 소수 저장
+int pn = 0; // 소수의 개수
+bool check[101]; // 수를 지웠는지 판단하는 배열 (지웠으면 true)
+int n = 100; // 100까지의 소수를 찾는다.
+
+for (int i = 2; i*i <= n; i++) {
+    if (check[i] == false) {
+        prime[pn++] = i;
+
+        // i의 배수를 지워준다.
+        for (int j = i * j; j <= n; j += i) {
+            check[j] = true;
+        }
+    }
+}
+```
+> 참조문제
+P_1929
+
