--- a/6. Algorithm/3. 브루트포스/브루트포스.md
+++ b/6. Algorithm/3. 브루트포스/브루트포스.md
@@ -2,7 +2,7 @@
 모든 경우의 수를 다 해보는 알고리즘을 의미한다. 모든 경우의 수는 문제에 어떤 방법이 제공되는데, 그 방법에 대해 모든 가능성을 고려해서 계산한다. </br>
 예를 들어, 비밀번호가 4자리이고, 숫자로만 이루어져 있다고 한다면
 0000부터 9999까지 다 입력해보면 된다. 그 경우의 수는 10,000가지가 된다. </br>
-> 브루트 포스 방법은 가능한 방법의 계수가 너무 많으면 사용하기가 어렵다.
+> 브루트 포스 방법은 가능한 방법의 개수가 너무 많으면 사용하기가 어렵다.
 
 - 브루트 포스로 문제를 풀기 위해서는 다음과 같은 3가지 단계를 생각해볼 수 있다.
 1. 문제의 가능한 경우의 수를 계산해본다. </br>
