--- a/6. Algorithm/3. 브루트포스/브루트포스.md
+++ b/6. Algorithm/3. 브루트포스/브루트포스.md
@@ -24,3 +24,35 @@ N * (N - 1) * (N - 2) / 3 * 2 * 1 = O(N^3)
 > 참고 문제 
 P. 2309, P_3085
 
+## N과 M
+___
+- 1부터 N까지 자연수 중에서 중복 없이 M까지 고른 수열을 모두 구하는 문제
+- 순서와 밀접한 브루트 포스이다.
+- 재귀 함수와 연관되어 있다. 어떤 위치에 올 수 있는 수를 결정한다. </br>
+  어떤 수를 결정하는데 동작되는 로직은 같기 때문에 재귀함수를 사용할 수 있다. </br>
+    즉 1-N 수 중에서 아용하지 않은 수를 같은 동작을 수행하면서 결정하게 된다.
+
+```
+bool c[10]; // i를 사용했으면 true, 아니면 false
+int a[10]; // 수열을 저장하는 배열, 즉 go의 index에 올 값을 저장
+
+// index 번째의 수를 결정
+void go(int index, int n, int m) {
+    if (index == m) {
+        // 수열을 출력
+        return;
+    }
+
+    // 1부터 N까지 수 중에서 앞에서 사용하지 않은 수를 찾음
+    for (int i = 1; i <= n; i++) {
+        // 앞에서 이미 사용한 것은 건너뛴다.
+        if (c[i]) continue;
+        // 함수를 호출하기 전에 상태를 저장한다.
+        c[i] = true;
+        a[index] = i;
+        go(index + 1, n, m);
+        c[i] = false;
+    }
+}
+```
+> 참고문제 P_15649
