열거타입 및 JVM구조 정리 & 오탈자 수정

--- a/4. Spring/1. Spring Framework/1. DI/1.1 DI(Dependency Injection).md
+++ b/4. Spring/1. Spring Framework/1. DI/1.1 DI(Dependency Injection).md
@@ -68,7 +68,7 @@ PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 UserService userService = new UserServiceImpl(userRepository, passwordEncoder);
 ```
 
-__어떤 클래스가 필요로 하는 컴포넌트를 외부에서 생성한 후, 내부에서 사용 가능하게 만들어 주는 과정을 '의존성을 주임(DI)한다' 또는 '인젝션(Injection) 한다'라고 한다.__ 그리고 이러한 의존성 주입을 자동으로 처리하는 기반을 '__DI 컨테이너__'라고 한다. </br>
+__어떤 클래스가 필요로 하는 컴포넌트를 외부에서 생성한 후, 내부에서 사용 가능하게 만들어 주는 과정을 '의존성을 주입(DI)한다' 또는 '인젝션(Injection) 한다'라고 한다.__ 그리고 이러한 의존성 주입을 자동으로 처리하는 기반을 '__DI 컨테이너__'라고 한다. </br>
 
 스프링 프레임워크가 제공하는 기능 중 가장 중요한 것이 바로 이 DI 컨테이너의 기능이다. 스프링 프레임워크의 DI 컨테이너에 UserRepository, PasswordEncoder의 인터페이스와 구현 클래스를 알려주고 의존 관계를 정의해주면 __UserServiceImpl이 생성될 때 구현 클래스가 자동으로 생성__ 되어 주입된다. DI 컨테이너에서 UserService를 꺼내오는 코드는 다음과 같다.
 
