--- a/4. Spring/1. Spring Framework/1. DI/1.2 DI 개요.md
+++ b/4. Spring/1. Spring Framework/1. DI/1.2 DI 개요.md
@@ -60,7 +60,7 @@ UserService userService = (UserService) context.getBean("userService"); // (3)
 
 (2) : 가져오려는 Bean의 이름과 타입을 지정하는 방법. 지정한 타입에 해당하는 Bean이 DI 컨테이너에 여러 개 있을 때 이름으로 구분하기 위해 사용. </br>
 
-(3) : 가져오려는 Bean의 이름을 지정하는 방법. 방환값이 Object 타입이라서 원하는 Bean 타입으로 형변환해서 사용. </br>
+(3) : 가져오려는 Bean의 이름을 지정하는 방법. 반환값이 Object 타입이라서 원하는 Bean 타입으로 형변환해서 사용. </br>
 
 또한 추가적으로 아래와 같은 방법으로 Bean을 설정할 수 있다. </br>
 
