--- a/4. Spring/1. Spring Framework/1. DI/1.1 DI(Dependency Injection).md
+++ b/4. Spring/1. Spring Framework/1. DI/1.1 DI(Dependency Injection).md
@@ -1,7 +1,7 @@
 # DI(Dependency Injection)
 엔터프라이즈 애플리케이션을 개발할 때는 하나의 처리를 수행하기 위해 여러 개의 컴포넌트를 조합해서 구현하는 경우가 일반적이다. 이때 사용되는 컴포넌트에는 '공통으로 사용되는 기능을 따로 분리한 컴포넌트', 'DB에 접근하기 위한 컴포넌트' 등이 될 수 있다. </br>
 
-이처럼 하나의 처리를 구현하기 위해 여러 개의 컴포넌트를 통합할 때 읜존성 주입이라는 접근 방식이 큰 힘을 발휘한다. 아래의 코드를 예를 들어 알아보자.
+이처럼 하나의 처리를 구현하기 위해 여러 개의 컴포넌트를 통합할 때 의존성 주입이라는 접근 방식이 큰 힘을 발휘한다. 아래의 코드를 예를 들어 알아보자.
 </br>
 
 ```java
