브루트포스 백트래킹

--- a/6. Algorithm/3. 브루트포스/브루트포스.md
+++ b/6. Algorithm/3. 브루트포스/브루트포스.md
@@ -61,3 +61,9 @@ void go(int index, int n, int m) {
 ___
 
 > 참고문제 P_9095
+
+## 백트래킹
+___
+더 이상 호출이 의미가 없을경우 중단시켜 효율을 증가 시킨다. </br>
+
+> 참고문제 P_14889
