객체 상속 및 다형성 추가

--- a/1. Java/객체지향/객체지향.md
+++ b/1. Java/객체지향/객체지향.md
@@ -360,3 +360,5 @@ ___
 |Annotation|getAnnotation(Class<T> annotationClass)|지정한 어노테이션이 적용되어 있으면 어노테이션을 리턴하고 그렇지 않다면 null을 리턴.|
 |Annotation[]|getAnnotations()|적용된 모든 어노테이션을 리턴. Class에서 호출했을 때 상위 클래스에 적용된 어노테이션 모두 포함.|
 |Annotation[]|getDeclaredAnnotations()|직접 적용된 모든 어노테이션을 리턴. Class에서 호출했을 때 상위 클래스에 적용된 어노테이션을 포함되지 않음.|
+
+> 참조 : 이것이 자바다(신용권의 Java 프로그래밍 정복)
