--- a/1. Java/객체지향/객체.md
+++ b/1. Java/객체지향/객체.md
@@ -337,3 +337,52 @@ driver.drive(bus);
 ```
 
 drive() 메소드는 Vehicle 타입을 매개 변수로 선언했지만, Vehicle을 상속받는 Bus 객체가 매개값으로 사용되면 자동 타입 변환이 발생한다. 매개값으로 어떤 자식객체가 제공되느냐에 따라 메소드의 실행 결과는 다양해질 수 있다. 이것이 __매개 변수의 다형성__ 이다. 자식 객체가 부모의 메소드를 오버라이딩했다면 메소드 내부에서 오버라이딩된 메소드를 호출함으로써 메소드의 실행 결과는 다양해진다.
+
+
+### 2.4 강제 타입 변환(Casting)
+강제 타입 변환은 부모 타입을 자식 타입으로 변환하는 것을 말한다. 그렇다고 해서 모든 부모 타입을 자식 클래스 타입으로 강제 변환할 수 있는 것은 아니다. __자식 타입이 부모 타입으로 자동 변환 후, 다시 자식 타입으로 변환__ 할 떄 강제 타입 변환을 사용할 수 있다.
+
+```
+# 부모클래스 타입은 자식 타입이 부모 타입으로 변환된 상태여야 한다.
+자식클래스 변수 = (자식클래스) 부모클래스타입;
+```
+
+```java
+public class Example {
+    public static void main(String[] args) {
+        Parent parent = new Child();
+
+        /**
+        이때 parent는 Child 클래스 내에 존재하는 필드 및 메서드 사용 불가.
+         */
+        ...
+
+        Child child = (Child) parent;
+
+        /** 
+        Child로 강제 타입 변환이 발생했기에 child는 Child 클래스 내에 존재하는 필드 및 메서드에 접근가능.
+        */
+    }
+}
+```
+
+### 2.5 객체 타입 확인(instanceof)
+객체가 어떤 클래스의 인스턴스인지 확인하려면 instanceof 연산자를 사용할 수 있다. 좌항의 객체가 우항의 인스턴스이면 true를 산출하고 그렇지 않으면 false를 산출한다.
+
+```
+좌항(객체) instanceof 우항(타입)
+```
+
+instanceof 연산자는 매개값의 타입을 조사할 때 주로 사용된다. 메소드 내에서 강제 타입 변환이 필요할 경우 반드시 매개값이 어떤 객체인지 확인하고 안전하게 강제 타입 변환을 해야한다.
+
+```java
+public void method(Parent parent) {
+    if (parent instanceof Child) {
+        Child child = (Child) parent;
+    }
+}
+```
+
+만약 타입을 확인하지 않고 강제 타입 변환을 시도하면 __ClassCastException__ 예외가 발생할 수 있다.
+
+> 참조 : 이것이 자바다(신용권의 Java 프로그래밍 정복)
