인터페이스 추가 업로드

--- a/1. Java/객체지향/인터페이스.md
+++ b/1. Java/객체지향/인터페이스.md
@@ -228,18 +228,116 @@ public class 구현클래스 implements 인터페이스A, 인터페이스B {
 ___
 
 ## 4. 인터페이스 사용
+```
+인터페이스 변수;
+변수 = 구현객체;
+```
+예를 들어 RemoteControl 인터페이스로 구현 객체인 Television과 Audio를 사용하려면 다음과 같이 RemoteControl 타입 변수 rc를 선언하고 구현 객체를 대입해야 한다.
+
+```java
+RemoteControl rs;
+rc = new Television();
+rc = new Autio();
+```
+
+### 4.1 디폴트 메소드 사용
+디폴트 메소드는 인터페이스에 선언되지만, 인터페이스에서 바로 사용할 수 없다. 디폴트 메소드는 추상 메소드가 아닌 인스턴스 메소드이므로 구현 객체가 있어야 사용할 수 있다. 예를 들어 RemoteControl 인터페이스는 setMeute() 라는 디폴트 메소드를 가지고 있지만, 이 메소드를 다음과 같이 호출할 수는 없다.
+
+```java
+RemoteControl.setMute(true);
+```
+
+즉, 구현 객체를 생성 후 인스턴스 변수에 대입하고 나서 호출할 수 있다.
+
+```java
+RemoteControl rc = new Television();
+rc.setMute(true);
+```
+디폴트 메소드는 인터페이스의 모든 구현 객체가 가지고 있는 기본 메소드라고 생각하면 된다.
+
+### 4.2 정적 메소드 사용
+인터페이스 정적 메소드는 인터페이스로 바로 호출이 가능하다.
+
+```java
+RemoteControl.changeBattery();
+```
 
 ___
 
 ## 5. 타입 변환과 다형성
+다형성은 하나의 타입에 대입되는 객체에 따라서 실행 결과가 다양한 형태로 나오는 성질을 말한다. 부모 타입에 어떤 자식 객체를 대입하느냐에 따라 실행 결과가 달라지듯이, 인터페이스 타입에 어떤 구현 객체를 대입하느냐에 따라 실행 결과가 달라진다.
 
+프로그램을 개발할 떄 인터페이스를 사용해서 메소드를 호출하도록 코딩을 했다면, 구현 객체를 교체하는 것은 매우 쉬워진다. 소스 코드는 변함이 없는데, 구현 객체를 교체함으로써 프로그램의 실행 결과가 다양해지는데 이것이 __인터페이스의 다형성__ 이다.
+
+### 5.1 자동 타입 변환
+구현 객체가 인터페이스 타입으로 변환되는 것은 자동 타입 변환에 해당한다. 자동 타입 변환은 프로그램 실행 도중에 자동적으로 타입 변환이 일어난다.
+
+```java
+인터페이스 변수 = 구현객체; // 자동 타입 변환
+```
+
+인터페이스 구현 클래스를 상속해서 자식 클래스를 만들었따면 자식 객체 역시 인터페이스 타입으로 자동 타입 변환시킬 수 있다.
+
+### 5.2 강제 타입 변환
+구현 객체가 인터페이스 타입으로 자동 변환하면, 인터페이스에 선언된 메소드만 사용 가능하다는 제약 사항이 따른다.
+하지만 경우에 따라서는 구현 클래스에 선언된 필드와 메소드를 사용해야 할 경우도 발생한다. 이때 강제 타입 변환을 해서 다시 구현 클래스 타입으로 변환한 다음, 구현 클래스의 필드와 메소드를 사용할 수 있다.
+
+```java
+구현클래스 변수 = (구현클래스) 인터페이스변수; // 강제 타입 변환 
+```
 ___
 
 ## 6. 인터페이스 상속
+인터페이스도 다른 인터페이스를 상속할 수 있다. 인터페이스는 클래스와는 달리 다중 상속을 허용한다.
 
+```java
+public interface 하위인터페이스 extends 상위인터페이스1, 상위인터페이스2 { ... }
+```
+
+하위 인터페이스를 구현하는 클래스는 하위 인터페이스의 메소드뿐만 아니라 슁이 언터페이스의 모든 추상 메소드에 대한 실체 메소드를 가지고 있어야 한다.
+
+```
+하위인터페이스 변수 = new 구현클래스(...);
+상위인터페이스1 변수 = new 구현클래스(...);
+상위인터페이스2 변수 = new 구현클래스(...);
+```
+하위 인터페이스로 타입 변환이 되면 상,하위 인터페이스에 선언된 모든 메소드를 사용할 수 있으나, 상위 인터페이스로 타입 변환되면 상위 인터페이스에 선언된 메소드만 사용 가능하고 하위 인터페이스에 선언된 메소드는 사용할 수 없다.
 ___
 
 ## 7. 디폴트 메소드와 인터페이스 확장
+디폴트 메소드는 인터페이스에 선언된 인스턴스 메소드이기 때문에 구현 객체가 있어야 사용할 수 있다. 선언은 인터페이스에서 하고, 사용은 구현 객체를 통해 사용해야한다. 디폴트 메소드는 모든 구현 객체에서 공유하는 기본 메소드처럼 보이지만, 인터페이스에서 디폴트 메소드를 허용한 다른 이유가 있다.
+
+그 이유는, 기존 인터페이스를 확장해서 새로운 기능을 추가하기 위함이다. 기존 인터페이스의 이름과 추상 메소드의 변경 없이 디폴트 메소드만 추가할 수 있기 때문에 이전에 개발한 구현 클래스를 그대로 사용할 수 있으면서 새롭게 개발하는 클래스는 디폴트 메소드를 활용할 수 있다.
+
+예를 들어, interfaceA에 아래와 같이 2개의 메소드가 있다고 가정하자.
+
+```java
+public interface interfaceA {
+    public void method1();
+}
+```
+
+이를 상속받는 classA는 아래와 같은 모야이 된다.
+
+```java
+public class classA implements interfaceA {
+    @Override
+    public void method1() {
+        // Something TODO...
+    }
+}
+```
+
+이후에 interfaceA가 새로운 추상 메서드가 추가가 되어 배포가 나간다고 하자.
+
+```java
+public interface interfaceA {
+    public void method1();
+    public void method2();
+}
+```
+
+이럴경우 기존 classA는 method2()를 구현하지 않았기 때문에 문제가 발생된다. 그래서 새로운 기능을 확장할 때 사용할 수 있는데 디폴트 메소드이다. __디폴트 메소드는 추상 메소드가 아니기 때문에 구현 클래스에서 실체 메소드를 작성할 필요가 없다.__
 
 > 참조 : 이것이 자바다(신용권의 Java 프로그래밍 정복)
 
