클라우드 추가 및 예외처리 오타 수정

--- a/1. Java/객체지향/예외처리.md
+++ b/1. Java/객체지향/예외처리.md
@@ -12,10 +12,10 @@ ___
 
 예외는 두 가지 종류가 있다.
 
-1. 일반예외(Exception)
+1. 일반예외
 - 일반 예외는 컴파일러 체크 예외라고도 하는데, 자바 소스를 컴파일하는 과정에서 예외 처리 코드가 필요한지 검사하기 떄문이다. 만약 예외 처리 코드가 없다면 컴파일 오류가 발생한다.
 
-2. 실행 예외(Exception)
+2. 실행 예외
 - 실행 예외는 컴파일하는 과정에서 예외 처리 코드를 검사하지 않는 예외를 말한다. 컴파일 시 예외 처리를 확인하는 차이일 뿐, 두 가지 예외는 모두 예외처리가 필요하다.
 
 ![예외처리종류](./ExceptionClassHierarchy.png)
@@ -107,6 +107,6 @@ public Class ApiException extends [ Exception | RuntimeException ] {
 }
 ```
 
-사용자 저으이 예외 클래스 이름은 Exception으로 끝나는 것이 좋다. 사용자 정의 예외 클래스도 필드, 생성자, 메소드 선언들을 포함할 수 있지만 대부분 생성자 선언만을 포함한다. 생성자는 두 개를 선언하는 것이 일반적인데, 하나는 매개 변수가 없는 기본 생성자이고, 다른 하나는 예외 발생 원인 메세지를 전달하기 위해 String 타입의 매개 변수를 갖는 생성자이다.
+사용자 정의 예외 클래스 이름은 Exception으로 끝나는 것이 좋다. 사용자 정의 예외 클래스도 필드, 생성자, 메소드 선언들을 포함할 수 있지만 대부분 생성자 선언만을 포함한다. 생성자는 두 개를 선언하는 것이 일반적인데, 하나는 매개 변수가 없는 기본 생성자이고, 다른 하나는 예외 발생 원인 메세지를 전달하기 위해 String 타입의 매개 변수를 갖는 생성자이다.
 
 > 참조 : 이것이 자바다(신용권의 Java 프로그래밍 정복)
