쿠버네티스 기본 추가

--- a/5. Cloud/1. k8s개요.md
+++ b/5. Cloud/1. k8s개요.md
@@ -33,7 +33,7 @@ ___
 쿠버네티스는 서비스 운영에서 발생하는 다양한 부담을 줄이는 것을 목표로 하여 다음과 같은 특징을 가진다.
 
 __1. 다양한 환경에서 쿠버네티스 사용 가능__
-- 퍼블릭 클라우드, 프라이비스 클라우드, 멀티 클라우드, 하이브리드 클라우드, 온 프레미스 등 다양한 장비에서 사용 가능
+- 퍼블릭 클라우드, 프라이빗 클라우드, 멀티 클라우드, 하이브리드 클라우드, 온 프레미스 등 다양한 장비에서 사용 가능
 
 __2. 계속되는 변화를 전제로 설계된 높은 유연성과 확장성__
 - 마이크로 서비스화된 애플리케이션에 최적화된 실행 환경
