--- a/1. Java/열거타입/열거타입.md
+++ b/1. Java/열거타입/열거타입.md
@@ -43,8 +43,8 @@ Week reservationDay;
 Week today = Week.SUNDAY;
 Week birthday = null;
 ```
-열거 상수는 일종의 객체이다. 즉 열거 객체로 생성되는데, 열거 타입 Week의 경우 MONDAY부터 SUNDAY까지의 열거 상수는 다음과 같이 총 7개의 Week 객체로 생성된다.</br>
-![열거상수객체](./enum_1.jpg)
+열거 상수는 일종의 객체이다. 즉 열거 객체로 생성되는데, 열거 타입 Week의 경우 MONDAY부터 SUNDAY까지의 열거 상수는 다음과 같이 총 7개의 Week 객체로 생성된다.
+
 
 만약 아래와 같이 열거 타입에 열거 번수를 저장해보자.
 
