--- a/1. Java/객체지향/제네릭.md
+++ b/1. Java/객체지향/제네릭.md
@@ -45,6 +45,16 @@ public class 클래스명<T> ( ... )
 public interface 인터페이스명<T> ( ... )
 ```
 
+제네릭에는 다양한 매개 변수가 존재하며 의미마다 다른 문자를 선택해서 사용한다. 주로 사용되는 명명 규칙의 예는 아래와 같다.
+
+```
+T - Type
+E - Element
+K - Key
+V - Value
+N - Number
+```
+
 제네릭 타입을 실제 코드에서 사용하려면 타입 파라매터에 구체적인 타입을 지정해야 한다. 그렇지 않을 경우 해당 클래스를 이용할 때 타입 변환이 빈번하게 발생하고, 읽어올 때에도 타입 변환이 발생한다.
 
 ```java
