브루트포스 백트래킹방법 추가

--- a/6. Algorithm/1. 시간 복잡도와 언어별 유의사항.md
+++ b/6. Algorithm/1. 시간 복잡도와 언어별 유의사항.md
@@ -15,7 +15,7 @@ ___
 
 ## 문제의 크기
 - 개발 상황에서 접하게 되는 상황은 문제를 해결하는 것이고, 항상 문제의 크기가 존재한다.
-- 예르들어 쇼핑몰의 장바구니 물건의 개수가 될 수 있고,
+- 예를 들어 쇼핑몰의 장바구니 물건의 개수가 될 수 있고,
 - 게임 동시 접속자의 수가 될 수 있다.
 - 이러한 문제의 크기를 보통 N이라고 하고, 문제의 크기 N에 따라 걸리는 시간이 다르다.
 > 이러한 이유 때문에 문제를 해결할 때는 문제의 크기를 먼저 보고 방법을 생각해야 한다.
