쿠버네티스 및 도커 커맨드 추가

--- a/5. Cloud/2. 컨테이너의 이해.md
+++ b/5. Cloud/2. 컨테이너의 이해.md
@@ -80,3 +80,5 @@ ___
 containerd는 다양한 플랫폼 위에서 동작하는 업계 표준 코어 컨테이너 런타임으로 간결하고 높은 이식성을 목표로 개발되었다. containerd는 Docker CE 17.3에서 버전 0.2.3이 도입되었고, Docker CE17.12에서는 1.1이 되었다. 이를 통해 이미지 보관 및 전송, 컨테이너 실행, 볼륨과 네트워크 연결과 같은 컨테이너의 라이프 사이클을 호스트에서 관리할 수 있게 되었다.
 
 containerd는 버전 1.1부터는 CRI(Container Runtime Interface)에 대응하여 네이티브 kublet도 연동할 수 있게 되었다.
+
+> 참조 : 15단계로 배우는 도커와 쿠버네티스
