--- a/5. Cloud/3. 쿠버네티스의 기본.md
+++ b/5. Cloud/3. 쿠버네티스의 기본.md
@@ -172,3 +172,5 @@ k8s 클러스터의 모든 노드에서 같은 파드를 실행하기 위해 존
 
 - __ReplicaSet__</br>
 디플로이먼트 컨트롤러와 연동해서 파드가 기동되어야 하는 수를 관리한다. 레플리카셋은 직접 다루기보다는 디플로이먼트를 통해 이용하는 것이 기본이다.
+
+> 참조 : 15단계로 배우는 도커와 쿠버네티스
