--- a/6. Algorithm/1. 시간 복잡도와 언어별 유의사항.md
+++ b/6. Algorithm/1. 시간 복잡도와 언어별 유의사항.md
@@ -76,3 +76,4 @@ ___
 ``` BufferedReader br = new BufferedReader(new InputStreamReader(System.in); ```
 - 출력이 많은 경우에는 StringBuilder를 사용해서 한 문자열로 만들어서 출력을 한 번만 사용한다.
 
+> 참조 : 백준 - 코딩 테스트 준비
