쿠버네티스 기초 업데이트

--- a/5. Cloud/3. 쿠버네티스의 기본.md
+++ b/5. Cloud/3. 쿠버네티스의 기본.md
@@ -15,6 +15,23 @@
 |kube-proxy|각 노드에서 실행되며 로드밸런싱 기능을 제공|
 |coredns|파드가 서비스 이름으로부터 IP 이름으로부터 IP 주소를 얻기 위해 사용|
 
+## etcd
+etcd는 Nodes, Pods, Configs, Secrets, Accounts, Roles 등 다양한 쿠버네티스 오브젝트를 저장하는 Key-Values 저장소이다. </br>
+쿠버네티스 클러스터에 변화를 줄 때마다 etcd 저장소는 업데이트 된다.
+
+## kube-apiserver
+kubectl 등의 API 클라이언트로부터 오는 REST 요청을 검증하고, API 오브젝트를 구성하고 상태를 보고한다. </br>
+kubectl 명령어를 수행하게되면 kube-apiserver로 요청을 하게 되고 유저 검증 과정을 처리한다. 이후 명령어에 대한 검증작업을 거친 후 etcd로부터 데이터를 조회하고 오브젝트 정보를 저장한다. 저장된 정보를 etcd가 가지고 있다가 scheduler가 업데이트 되지 않은 오브젝트를 처리하게 된다. 배포되는 서버의 kubelet은 해당 파드를 배포 후 kube-apiserver로 돌아온 다음에 etcd에 처리 결과 상태를 업데이트한다.</br>
+즉, kube-apiserver는 각종 인증, 수행, scheduler 등 처리에 대한 엔드포인트라 생각하면 된다.
+
+## kube-controller-manager
+컨트롤러를 구동하는 마스터상의 컴포넌트이다. controller manager 각 노드의 상태를 점검하고 즉각적인 상황에 대한 처리를 수행하게 된다. 컨트롤러는  Node-Controller, Replication-Controleller, Deployment-Controller 등이 존재하는데 이러한 전체적인 컨트롤러들을 관리하게 된다.
+
+## kube-scheduler
+kube-scheduler는 생성된 모든 파드에 대해 실행할 최적의 노드를 선택하는 역할을 한다. 파드는 생성해야할 리소스 나 조건이 서로 다를 수 있다. 스케쥴러는 해당 파드가 수행에 적합한 Node를 찾고 배포하게 된다. 이때 타겟 노드를 선택하기 위해 리소스 사용에 따라서 노드를 '필터링' 후 우선순위가 높은 Node를 찾을 후 해당 노드에 배포하게 된다.
+
+## kube-proxy
+쿠버네티스안에서는 많은 Pod들이 서로 연결될 수 있는데 이를 위해 Pod-Networking이 형성된다. Pod-Networkig구조를 가지기 위해 쿠버네티스는 모든 노드에 Kube-proxy를 배포하게 된다. Pod-Networking은 가상IP로 구성되어 있으며 각 Pod는 이 가상IP를 할당받는다. Pod가 IP나 DNS로 통신을 하려고 할 때 Kube-proxy를 이용하게 된다.
 ___
 
 ## 쿠버네티스 API 오프젝트
@@ -29,7 +46,36 @@ ___
 워크로드란 오브젝트의 __카테고리__ 를 나타내는 용어로 __Container와 Pod, 그리고 Controller의 그룹__ 을 의미한다.
 
 ### __파드(Pod)__
-파드는 컨테이너를 실행하기 위한 오브젝트이다. 파드는 한 개 혹은 여러 개의 컨테이너를 담을 수 있다.
+파드는 컨테이너를 실행하기 위한 단일 오브젝트이다. 파드는 한 개 혹은 여러 개의 컨테이너를 담을 수 있다. 규모를 크게 하기 위해서는 Pod를 더 배포를 하거나 규모를 줄이기 위해서는 Pod를 제거해야한다. </br>
+```shell
+# kubectl Command
+$ kubectl run nginx --image nginx
+
+# Get pods list
+$ kubectl get pods 
+```
+Pod는 YAML파일을 바탕으로도 생성이 가능하다. 루트 레벨의 속성으로 'apiVersion', 'kind', 'metadata', 'spec'이 존재하며 해당 속성은 필수이다.
+```yaml
+# pod-definition.yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-pod
+  # 일종의 kubernetes object Dictionary
+  # kubernetes Object를 구분하는데 사용되는 key-value의 쌍으로 서로 동일한 그룹으로 묶기 위해서는 labels이 각 오브젝트마다 동일해야한다.
+  labels:
+    app: myapp
+    type: front-end
+spec:
+  # List / Array
+  # Dash(-)는 리스트를 의미
+  containers:
+  - name: nginx-container
+    image: nginx
+```
+```shell
+$ kubectl apply -f pod-definition.yaml
+```
 
 ### __컨테이너(Container)__
 쿠버네티스에서 컨테이너만을 독자적으로 실행하는 것을 불가능하고, 반드시 파드 내에서 실행해야 한다.
