오타수정 및 정리내용 추가

--- a/1. Java/객체지향/객체지향.md
+++ b/1. Java/객체지향/객체지향.md
@@ -93,7 +93,7 @@ public class 클래스 {
         ...
     }
 
-    클랴스 (int a, int b) {
+    클래스 (int a, int b) {
         ...
     }
 
@@ -112,7 +112,7 @@ __이때 생성자에서 다른 생성자를 호출할 때 아래와 같이 this
     샐행문;
 }
 ```
-__this()는 자신의 다른 생성자를 호출하는 코드로 반드시 생썽자의 첫줄에서만 허용된다.__
+__this()는 자신의 다른 생성자를 호출하는 코드로 반드시 생성자의 첫줄에서만 허용된다.__
 
 ```java
 public class Car {
